(fix) whitespace bug on group view

--- a/client/src/components/Group/GroupStyles.css
+++ b/client/src/components/Group/GroupStyles.css
@@ -32,5 +32,8 @@
   height: 100%;
   width: 100%;
   border-radius: 0px !important;
-  
+}
+
+.sortToolbar {
+  overflow-x: hidden !important;
 }
